2003-04-29  Markus Germeier  <mager@tzi.de>

	* libmpio/src/ecc.c (mpio_ecc_256_check): 
	  fix level for debug messages

2003-04-27 Markus Germeier  <mager@tzi.de>
	* libmpio: fixed some C code "things" found with
	  "paranoia" CFLAGS settings
	* libmpio: changed license from GPL to LGPL

2003-04-21  Markus Germeier  <mager@tzi.de>

	* libmpio/id3.c (mpio_id3_copy_tag): 
	  remove trailing spaces as suggested by Thomas
	* kernel/Makefile.am: 
	  removed unnecessary -I$(INCLUDE) as spotted by Yury
	
2003-04-20  Markus Germeier  <mager@tzi.de>

	* libmpio/directory.c (mpio_dentry_filename_write): 
	  split this function from mpio_dentry_put to make a rename easier
	* libmpio/mpio.c (mpio_file_rename): 
	  libmpio/directory.c (mpio_dentry_rename): 
	  new functions

2003-04-19  Markus Germeier  <mager@tzi.de>

	* libmpio/id3.h: 
	  libmpio/id3.c: added files to support ID3 rewriting
	* libmpio/mpio.c (mpio_file_put_real): 
	  add support for ID3 rewriting
	* mplib/src/mplib_s.c:
	  small changes for MPIO use
	* mpiosh/callback.c (mpiosh_cmd_id3, mpiosh_cmd_id3_format): 
	  added function for commands "id3" and "id3_format"
	* mpiosh/config.c (mpiosh_config_read): 
	  add new config file options:
	  id3_rewriting [on|off]
	  id3_format <format>

2003-04-18  Markus Germeier  <mager@tzi.de>
	* integration of mplib 1.0.1 in source tree
	* update build environment to use mplib if not
	  disabled manually
	
2003-04-18  Markus Germeier  <mager@tzi.de>

	* mpiosh/callback.c (mpiosh_cmd_health):
	  libmpio/mpio.c (mpio_health): new functions to report
	  health status of SmartMedia cards.

2003-04-12  Markus Germeier  <mager@tzi.de>
	* small error messages changes

2003-04-11  Markus Germeier  <mager@tzi.de>

	* libmpio/directory.c (mpio_directory_make): 
	  libmpio/mpio.c (mpio_file_put_real): 
	  fix timestamp generation as suggested by Sebastian. Thanks!
	  (mpio_directory_is_empty,mpio_dentry_is_dir): 
	  added functions
	  (mpio_dentry_put): another 8.3 generation fix,